# energy-demand-forecasting

./: .env.sample  README.md  pyproject.toml  requirements.txt
.github/workflows/: feature_pipeline.yaml  inference_pipeline.yaml
notebooks/: 01_download_raw_data.ipynb  02_transform_raw_data_into_ts_data.ipynb  03_transform_ts_into_features_and_targets.ipynb  04_baseline_model.ipynb  04a_baseline_model.ipynb  05_lgbm_model.ipynb  05a_lgbm_model.ipynb  06_lgbm_model_with_hp_tuning.ipynb  07_backfill_feature_store.ipynb  08_feature_pipeline.ipynb  09_training_pipeline.ipynb  09a_training_pipeline.ipynb  10_inference.ipynb  11_backfill_predictions.ipynb
src/: config.py  data.py  frontend.py  inference.py  model.py  monitoring.py  monitoring_frontend.py  paths.py  plot.py
wheels/: hopsworks-4.1.2-py3-none-any.whl  hsfs-3.7.9-py3-none-any.whl
